--- a/web/app/cenozo/modal-password.tpl.html
+++ b/web/app/cenozo/modal-password.tpl.html
@@ -14,7 +14,8 @@
       <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.currentPass.$dirty && form.currentPass.$invalid }">
-          <input name="currentPass"
+          <input id="currentPass"
+                 name="currentPass"
                  ng-model="currentPass"
                  class="form-control"
                  type="{{ showPasswords ? 'text' : 'password' }}" />
@@ -30,8 +31,8 @@
       <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.newPass1.$dirty && form.newPass1.$invalid }">
-          <input name="newPass1"
-                 id="newPass1"
+          <input id="newPass1"
+                 name="newPass1"
                  ng-model="newPass1"
                  ng-change="checkPasswordMatch()"
                  class="form-control"
@@ -52,8 +53,8 @@
       <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.newPass2.$dirty && form.newPass2.$invalid }">
-          <input name="newPass2"
-                 id="newPass2"
+          <input id="newPass2"
+                 name="newPass2"
                  ng-model="newPass2"
                  ng-change="checkPasswordMatch()"
                  class="form-control"
