--- a/web/app/user/view.tpl.html
+++ b/web/app/user/view.tpl.html
@@ -3,3 +3,7 @@
   <cn-record-list heading="{{ child.title }} List"
                   model="model.viewModel[child.camel+'Model']"></cn-record-list>
 </div>
+<div class="vertical-spacer">
+  <cn-record-list heading="Spoken {{ child.title }} List (if empty then all languages are spoken)"
+                  model="model.viewModel['languageModel']"></cn-record-list>
+</div>
