Fixing bug in datetime picker

--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -66,7 +66,8 @@
                    ng-disabled="null === restrict.value" />
           </div>
           <div class="col-sm-2">
-            <label class="btn btn-warning pull-right"
+            <label class="btn btn-default pull-right"
+                   ng-class="{'btn-warning':local.emptyList[$index].state}"
                    ng-model="local.emptyList[$index].state"
                    ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
@@ -101,7 +102,8 @@
             </select>
           </div>
           <div class="col-sm-2">
-            <label class="btn btn-warning pull-right"
+            <label class="btn btn-default pull-right"
+                   ng-class="{'btn-warning':local.emptyList[$index].state}"
                    ng-model="local.emptyList[$index].state"
                    ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
@@ -139,7 +141,8 @@
                    ng-disabled="null === restrict.value" />
           </div>
           <div class="col-sm-2">
-            <label class="btn btn-warning pull-right"
+            <label class="btn btn-default pull-right"
+                   ng-class="{'btn-warning':local.emptyList[$index].state}"
                    ng-model="local.emptyList[$index].state"
                    ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
@@ -177,7 +180,8 @@
                    ng-disabled="null === restrict.value" />
           </div>
           <div class="col-sm-2">
-            <label class="btn btn-warning pull-right"
+            <label class="btn btn-default pull-right"
+                   ng-class="{'btn-warning':local.emptyList[$index].state}"
                    ng-model="local.emptyList[$index].state"
                    ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
@@ -222,7 +226,8 @@
                    ng-disabled="null === restrict.value" />
           </div>
           <div class="col-sm-2">
-            <label class="btn btn-warning pull-right"
+            <label class="btn btn-default pull-right"
+                   ng-class="{'btn-warning':local.emptyList[$index].state}"
                    ng-model="local.emptyList[$index].state"
                    ng-click="local.toggleEmpty( $index )"
                    btn-checkbox>Empty</label>
